managed/apps/tw/components/website/base/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: tw
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: tw
      component: website
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: tw
        component: website
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/tw/website/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/openai"
              name: openai
              readOnly: true
      volumes:
        - name: openai
          secret:
            secretName: website-api-openai
      imagePullSecrets:
        - name: image-pull-secret
