managed/apps/tw/components/website/base/svc-website-api-api.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "website-api-api"
  namespace: tw
spec:
  selector:
    app: tw
    component: website
    container: api
  ports:
    - name: "api"
      protocol: "TCP"
      port: 8080
